# MeshGeodesic

./: .clang-tidy  CMakeLists.txt  README.md  gen_sphere.py
app/: example0.cpp  example1.cpp  farthest_point_sampling.cpp
docs/: UserGuide.md
src/: geodesic_algorithm_exact.h  geodesic_algorithm_subdivision.h  geodesic_matlab_api.cpp  geodesic_memory.h  geodesic_mesh.h  geodesic_mesh_elements.h
tests/: benchmark_geodesic.cpp  test_geodesic.cpp
